--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install black isort pytest
+          pip install black isort pytest pytest-cov
       - name: Lint
         run: |
           black --check .
           isort --check-only .
       - name: Test
-        run: pytest
+        run: pytest --maxfail=1 --disable-warnings --cov=src --cov-report=term-missing --cov-fail-under=90
